WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208943
Test262-runner should always consider crashes as new failures
https://bugs.webkit.org/show_bug.cgi?id=208943
Summary
Test262-runner should always consider crashes as new failures
Keith Miller
Reported
2020-03-11 13:47:35 PDT
Test262-runner should always consider crashes as new failures
Attachments
Patch
(12.46 KB, patch)
2020-03-11 13:49 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2020-03-11 13:49:35 PDT
Created
attachment 393284
[details]
Patch
Yusuke Suzuki
Comment 2
2020-03-11 13:51:17 PDT
Comment on
attachment 393284
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2020-03-11 14:43:09 PDT
Comment on
attachment 393284
[details]
Patch Clearing flags on attachment: 393284 Committed
r258286
: <
https://trac.webkit.org/changeset/258286
>
WebKit Commit Bot
Comment 4
2020-03-11 14:43:10 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-03-11 14:44:18 PDT
<
rdar://problem/60341923
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug