Test262-runner should always consider crashes as new failures https://bugs.webkit.org/show_bug.cgi?id=208943

Reviewed by Yusuke Suzuki.

JSTests:

* test262/expectations.yaml:

Source/JavaScriptCore:

BigInt.asUintN() / BigInt.asIntN() should not crash when called even if we have
not implemented them yet...

* runtime/BigIntConstructor.cpp:
(JSC::bigIntConstructorFuncAsUintN):
(JSC::bigIntConstructorFuncAsIntN):

Tools:

Right now the runner will consider crashes with no output as passes, which is obviously bad.
Since we should never crash on a conformance test we should consider a crash as a new failure
100% of the time.

* Scripts/test262/Runner.pm:
(processFile):
(runTest):
(processResult):


Canonical link: https://commits.webkit.org/221863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258286 268f45cc-cd09-0410-ab3c-d52691b4dbfc